K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - host: local.dev
      http:
        paths:
          - path: /api/blog
            pathType: Prefix
            backend:
              service:
                name: blog-clusterip-srv
                port:
                  number: 80
          - path: /api/newspaper
            pathType: Prefix
            backend:
              service:
                name: newspaper-clusterip-srv
                port:
                  number: 80
          - path: /api/subscribe
            pathType: Prefix
            backend:
              service:
                name: subscription-clusterip-srv
                port:
                  number: 80
          - path: /api/contact
            pathType: Prefix
            backend:
              service:
                name: contact-clusterip-srv
                port:
                  number: 80
